# queryparser

./: queryparser.cabal  stack.yaml
demo/: queryparser-demo.cabal
demo/src/: Demo.hs
dialects/hive/: queryparser-hive.cabal
dialects/hive/src/Database/Sql/Hive/: Parser.hs  Type.hs
dialects/presto/: queryparser-presto.cabal
dialects/presto/src/Database/Sql/Presto/: Parser.hs  Type.hs
dialects/vertica/: queryparser-vertica.cabal
dialects/vertica/src/Database/Sql/Vertica/: Parser.hs  Type.hs
dialects/vertica/src/Database/Sql/Vertica/Parser/: Shared.hs
src/Database/Sql/: Type.hs
src/Database/Sql/Type/: Names.hs  Schema.hs  Scope.hs
src/Database/Sql/Util/: Schema.hs  Scope.hs  Tables.hs
src/Database/Sql/Util/Lineage/: ColumnPlus.hs  Table.hs
test/: Tests.hs  queryparser-test.cabal
test/Database/Sql/Presto/Parser/: Test.hs
test/Database/Sql/Util/: Test.hs
test/Database/Sql/Util/Columns/: Test.hs
test/Database/Sql/Util/Eval/: Test.hs
test/Database/Sql/Util/Joins/: Test.hs
test/Database/Sql/Util/Lineage/ColumnPlus/: Test.hs
test/Database/Sql/Util/Lineage/Table/: Test.hs
test/Database/Sql/Util/Scope/: SchemaChange.hs  Test.hs
test/Database/Sql/Util/Tables/: Test.hs
test/Database/Sql/Vertica/Parser/: Test.hs
