name:                queryparser-demo
version:             0.1.0.0
synopsis:            Demo package containing queryparser examples
description:
            Library containing sample queryparser calls, for user exploration and
            playgrounding.
license:             MIT
license-file:        LICENSE
author:              Heli Wang, David Thomas, Matt Halverson
maintainer:          heli@uber.com
-- copyright:
category:            Database
build-type:          Simple
extra-source-files:
                     CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Demo
  -- other-modules:
  -- other-extensions:
  default-extensions:  DataKinds 
                     , FlexibleContexts 
                     , GADTs
                     , LambdaCase
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies

  build-depends:       base >=4.9 && <5
                     , queryparser
                     , queryparser-vertica
                     , unordered-containers >=0.2 && <0.3
                     , containers
                     , text >=1.2 && <1.3
                     , pretty >=1.1 && <1.2
                     , polysemy
                     , polysemy-plugin

  hs-source-dirs:      src

  ghc-options:         -Wall -Wno-redundant-constraints
                       -O2 -flate-specialise -fspecialise-aggressively
                       -fplugin=Polysemy.Plugin

  default-language:    Haskell2010
